# CalificaTuProfesor

./: .gitignore  README.md  compose.yaml  precompose.py
axum_server/: Cargo.toml  Dockerfile
axum_server/config/: spanish_bad_words.json
axum_server/scripts/: handle_dictionaries.rs
axum_server/src/: lib.rs  main.rs
axum_server/src/constants/: black_list_words.rs  common_triagrams.rs  mod.rs  unusual_clusters.rs  unusual_trigrams.rs  white_list_words.rs
axum_server/src/content_filter/: filter.rs  gibberish.rs  matcher.rs  mod.rs  models.rs  normalizer.rs  word_loader.rs
axum_server/src/controllers/: mod.rs  word_filtering_controller.rs
axum_server/tests/: integration_tests.rs
axum_server/tests/unit_tests/: filter_tests.rs  loader_tests.rs
back/: Cargo.toml  pom.xml
back-csharp/: .dockerignore  .project  (+8 more)
back/src/: main.rs
back/src/contracts/: mod.rs  repository.rs
back/src/controllers/: mod.rs  teachers.rs
back/src/dtos/: campus_dto.rs  campus_university_dto.rs  mod.rs  roster.rs  roster_dto.rs  university_dto.rs
back/src/main/java/com/backend/restservice/controllers/: GreetingController.java  TeacherController.java
back/src/main/java/com/backend/restservice/models/: Campus.java  Greeting.java  Roster.java  State.java  Teacher.java  University.java
back/src/main/resources/: application.properties
back/src/models/: mod.rs  search_name_ops.rs  university.rs  vessel.rs
back/src/repositories/: campus_repo.rs  mod.rs  roster_repo.rs  uni_struct_repo.rs  university_repo.rs
back/src/repositories/search_name/: mod.rs  search_name_repo.rs
back/src/repositories/universities/: mod.rs  universityRepo.rs
word_filtering/: .gitignore  Cargo.toml  README.md
word_filtering/config/: spanish_bad_words.json
word_filtering/scripts/: handle_dictionaries.rs
word_filtering/src/: main.rs  wasm.rs
word_filtering/src/content_filter/: filter.rs  gibberish.rs  matcher.rs  normalizer.rs  word_loader.rs
word_filtering/tests/: integration_tests.rs
word_filtering/tests/unit_tests/: gibberish_tests.rs  matcher_tests.rs  normalizer_tests.rs
(+289 files in other folders)
