[package]
name = "axum_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
regex = "1.0"
once_cell = "1.0"
lazy_static = "1.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.4", features = ["cors"] }
phf = { version = "0.11.3", features = ["macros"] }
