[package]
name = "back-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
async-trait = "0.1.52"
#actix-web = "3"
actix-web = { version = "4.0.0-beta.10" }

# tokio + rustls
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres" , "chrono"] }