[package]
name = "word_filtering"
version = "0.1.0"
edition = "2021"

[lib]
name = "word_filtering_lib"  # Changed library name
crate-type = ["cdylib", "rlib"]  # Both WASM and Rust library outputs

[[bin]]
name = "word_filtering_cli"  # Explicit binary name
path = "src/main.rs"

[dependencies]
# Core dependencies
regex = "1.0"
once_cell = "1.0"
lazy_static = "1.4"
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM-specific dependencies (optional for native builds)
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }

# CLI-specific dependencies (only for native builds)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.0"  # For testing

# WASM target dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5"
getrandom = { version = "0.2", features = ["js"] }

[features]
wasm = ["dep:wasm-bindgen"]

[dev-dependencies]
tempfile = "3.0"
